# heliogram

./: .gitignore  Dockerfile  LICENSE  Makefile  NOTES.md  README.md  RESULTS.md  RUNBOOK-GPU.md  demo.py  probe_report.json  probe_report.md  probe_report_7b.json  probe_report_7b.md  probe_report_easy.json  probe_report_easy.md  probe_report_premerger.json  probe_report_premerger.md  pyproject.toml  requirements-cpu.lock.txt  requirements-gpu.lock.txt  requirements-gpu.txt  results.csv
.github/workflows/: ci.yml
docs/: FINDINGS.md  THREAT-MODEL.md  writeup-external.md  writeup.md
gpu_gonogo_out/: README.md  design_a.json  design_a_bigdata.json  design_b.json  design_b2_strong.json  design_b_strong.json  probe_post_p16.md  probe_pre_p16.md
heliogram/: __init__.py  baselines.py  benefit.py  codec.py  corruption.py  dataset.py  encoder.py  harness.py  ocr_eval.py  patchsize.py  probe.py  typography.py  vlm.py
heliogram/data/: base64_baseline.json  text_baselines.json
heliogram/instruments/: __init__.py  bayes_bound.py  fingerprint.py  foreign_tile.py  injection_bench.py  learned_alphabet.py  saliency.py
microfiche-seed/: PLAN.md  README.md  TRANSPLANT.md
scripts/: drive_merger_adapter.py  gen_dataset.py  gpu_gonogo.sh  run_probe.py  run_typography_ocr.py  smoke.sh  train_merger_adapter.py  train_qlora.py
spec/: format-v0.1.md  instruments-v0.md
tests/: __init__.py  conftest.py  test_bayes_bound.py  test_benefit.py  test_decode_errors.py  test_fingerprint.py  test_foreign_tile.py  test_harness.py  test_injection_bench.py  test_learned_alphabet.py  test_merger_adapter_contract_cpu.py  test_ocr_eval.py  test_p16_curriculum.py  test_patchsize.py  test_phase2_scaffold.py  test_probe.py  test_probe_contract_cpu.py  test_roundtrip.py  test_saliency.py  test_smart_resize.py  test_text_baselines.py  test_train_qlora_lora_targets.py  test_typography.py
tests/expected/: benefit_invariants.txt  foreign_tile_invariants.txt  pytest_summary.txt  typography_verdict.txt
