[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heliogram"
version = "0.1.0"
description = "Optical context compression for self-hosted VLMs: measuring the data-channel capacity of ViT patches."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "pillow>=9.0",
    "numpy>=1.21",
    "reedsolo>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# heliogram.baselines.measure_base64_baseline / heliogram.benefit._estimate_raw_text_tokens's
# measured path -- loading a real BPE tokenizer (e.g. Qwen/Qwen2.5-VL-7B-Instruct) to MEASURE
# base64/raw-text bits-per-token instead of using the analytic ~6.0 bits/token guess. Tokenizer
# use only, deliberately no torch/model weights needed -- NOT required by the base package:
# `import heliogram`/`import heliogram.baselines`/`import heliogram.benefit` never need this
# (see baselines.py's/benefit.py's module docstrings on the CPU-only-by-default import boundary).
baseline = ["transformers>=4.49"]
# Phase 2 (GPU) scaffold only -- QLoRA fine-tuning Qwen2.5-VL via scripts/train_qlora.py and
# running heliogram.vlm.QwenVLDecoder/zero_shot_symbol_error for real. NOT required by the base
# package: `import heliogram` never needs any of these (see heliogram/vlm.py's module
# docstring). Loosely pinned; mirrored in requirements-gpu.txt for non-pyproject installs.
gpu = [
    "torch>=2.1",
    "transformers>=4.46",
    "peft>=0.11",
    "bitsandbytes>=0.43",
    "accelerate>=0.30",
    "datasets>=2.19",
    "qwen-vl-utils>=0.0.8",
]

[tool.setuptools.packages.find]
include = ["heliogram*"]

[tool.setuptools.package-data]
# Ships heliogram/data/base64_baseline.json (heliogram.baselines' persisted, tokenizer-measured
# base64 bits/token baseline -- see MEASURED_BASELINE_PATH/measure_base64_baseline/
# load_measured_baseline) as installed package data, not just a source-tree file.
heliogram = ["data/*.json"]
